tests/baselines/reference/unusedTypeParameterInLambda1.errors.txt
tests/cases/compiler/unusedTypeParameterInLambda1.ts(3,17): error TS6133: 'T' is declared but never used.


==== tests/cases/compiler/unusedTypeParameterInLambda1.ts (1 errors) ====
    class A {
        public f1() {
            return <T>() => {
                    ~
!!! error TS6133: 'T' is declared but never used.
    
            }
        }
    }